<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Show Java - A java/apk decompiler for android
  ~ Copyright (c) 2018 Niranjan Rajendran
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/decompilerSettings"
        app:iconSpaceReserved="false">

        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="true"
            android:key="ignoreLibraries"
            android:summary="@string/ignoreLibrariesPreferenceSummary"
            android:title="@string/speedUpDecompile" />

        <ListPreference
            app:iconSpaceReserved="false"
            android:defaultValue="cfr"
            android:entries="@array/decompilers"
            android:entryValues="@array/decompilersValues"
            android:key="decompiler"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/selectDefaultDecompiler" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/easeOfUse">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:defaultValue="false"
            android:key="hideDecompilerSelect"
            android:summary="@string/autoDecompilerSelectionPreferenceSummary"
            android:title="@string/autoDecompilerSelection" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/experimental">

        <EditTextPreference
            android:defaultValue="500"
            android:inputType="number"
            android:key="chunkSize"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/classesPerChunk" />

        <EditTextPreference
            android:defaultValue="2"
            android:inputType="number"
            android:key="maxAttempts"
            android:maxLines="1"
            android:singleLine="true"
            android:title="@string/maxDecompilerAttempts" />

        <Preference
            app:iconSpaceReserved="false"
            android:key="clearSourceHistory"
            android:summary="@string/clearSourceHistorySummary"
            android:title="@string/clearSourceHistory"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/helpSupport"
        app:iconSpaceReserved="false">

        <Preference
            app:iconSpaceReserved="false"
            android:summary="@string/reportBugPreferenceSummary"
            android:title="@string/reportBug">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/niranjan94/show-java/issues"/>
        </Preference>

        <Preference
            app:iconSpaceReserved="false"
            android:summary="@string/tapToRateApp"
            android:title="@string/rateAndReview">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=com.njlabs.showjava"/>
        </Preference>
        <Preference
            app:iconSpaceReserved="false"
            android:summary="@string/tapViewOpenSourceLicenses"
            android:title="@string/openSourceLicense">
            <intent
                android:targetPackage="com.njlabs.showjava"
                android:targetClass="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"/>
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>