<!--
  ~ Show Java - A java/apk decompiler for android
  ~ Copyright (c) 2018 Niranjan Rajendran
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.njlabs.showjava.activities.ContainerActivity">

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_white"
        android:title="@string/searchApps"
        android:visible="false"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <group android:id="@+id/code_explorer_group"
        android:checkableBehavior="none">

        <item
            android:id="@+id/share_code"
            android:icon="@drawable/ic_share_white"
            android:orderInCategory="0"
            android:title="@string/shareSource"
            android:visible="false"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />

        <item
            android:id="@+id/delete_code"
            android:icon="@drawable/ic_delete_white"
            android:orderInCategory="0"
            android:title="@string/deleteSource"
            android:visible="false"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    </group>

    <group android:id="@+id/code_view_group"
        android:checkableBehavior="all">

        <item
            android:id="@+id/invert_colors"
            android:icon="@drawable/ic_invert_colors_white"
            android:orderInCategory="0"
            android:title="@string/invertBackgroundColor"
            android:visible="false"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
        <item
            android:id="@+id/wrap_text"
            android:orderInCategory="1"
            android:visible="false"
            android:title="@string/wrapLines"
            android:checkable="true"
            android:checked="false"
            android:actionLayout="@layout/action_layout_checkbox"
            app:showAsAction="never" />

        <item
            android:id="@+id/line_number"
            android:orderInCategory="2"
            android:visible="false"
            android:title="@string/lineNumbers"
            android:checkable="true"
            android:checked="true"
            android:actionLayout="@layout/action_layout_checkbox"
            app:showAsAction="never" />

        <item
            android:id="@+id/zoomable"
            android:orderInCategory="3"
            android:visible="false"
            android:title="@string/zoomable"
            android:checkable="true"
            android:checked="true"
            android:actionLayout="@layout/action_layout_checkbox"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/common_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/bug_report_option"
            android:orderInCategory="4"
            android:icon="@drawable/ic_bug_report_black"
            android:title="@string/reportBug"
            app:showAsAction="never" />

        <item
            android:id="@+id/about_option"
            android:orderInCategory="5"
            android:icon="@drawable/ic_info_black"
            android:title="@string/about"
            app:showAsAction="never" />

        <item
            android:id="@+id/settings_option"
            android:orderInCategory="6"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/settings"
            app:showAsAction="never" />
    </group>

    <group android:id="@+id/extra_group">
        <item
            android:id="@+id/get_pro_option"
            android:orderInCategory="7"
            android:visible="false"
            android:icon="@drawable/ic_whatshot_black"
            android:title="@string/appNameGetPro"
            app:showAsAction="never" />
    </group>

</menu>
