<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Show Java - A java/apk decompiler for android
  ~ Copyright (c) 2018 Niranjan Rajendran
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/decompilerItemCard"
        layout="@layout/layout_pick_decompiler_list_item"
        android:layout_height="75dp"
        android:layout_width="match_parent" />

    <LinearLayout
        android:id="@+id/statusTextLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/leftProgressGear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="7dp"
                android:contentDescription="@string/loadingGear"
                app:srcCompat="@drawable/ic_gear_grey" />

            <ImageView
                android:id="@+id/rightProgressGear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/loadingGear"
                app:srcCompat="@drawable/ic_gear_grey" />

        </RelativeLayout>

        <TextView
            android:id="@+id/inputPackageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/waitingToStart"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/grey_400" />

        <TextView
            android:id="@+id/statusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/processing"
            android:textAllCaps="false"
            android:gravity="center"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_400" />

        <TextView
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ellipsize="none"
            android:singleLine="false"
            android:text="@string/gettingReady"
            android:gravity="center"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey_400" />
    </LinearLayout>

    <TextView
        android:id="@+id/memoryUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/memoryStatus"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/grey_400"
        android:text="@string/memoryUsage" />

    <TextView
        android:id="@+id/memoryStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancelButton"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginBottom="8dp"
        android:textColor="@color/grey_400"
        android:text="@string/zeroPercentage" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Widget.AppCompat.Button.Borderless"
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/cancel"
        android:textColor="@color/grey_400" />

</RelativeLayout>