<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Show Java - A java/apk decompiler for android
  ~ Copyright (c) 2018 Niranjan Rajendran
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.decompiler.DecompilerProcessActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_alignParentLeft="true">


        <ImageView
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:src="@drawable/sad_ram"
            android:contentDescription="@string/lowMemory" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lowMemory"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/grey_400" />

        <TextView
            android:layout_width="307dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/lowMemoryInfo"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/grey_400" />

        <TextView
            android:layout_width="301dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:ellipsize="none"
            android:gravity="center"
            android:textAlignment="center"
            android:singleLine="false"
            android:text="@string/lowMemoryExtraInfo"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/grey_400" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reportButton"
            android:layout_marginTop="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fileBugReport" />
    </LinearLayout>


    <include
        android:id="@+id/adView"
        layout="@layout/layout_admob" />

</RelativeLayout>